@@ -38,6 +38,10 @@
 <p>2018-02-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/topol.c (ReadTOPOLImage): Add additional header
+validations.  Fixes oss-fuzz issue 5975
+&quot;graphicsmagick/coder_TOPOL_fuzzer: Floating-point-exception in
+ReadTOPOLImage&quot;.  (Credit to OSS-Fuzz)</li>
 <li>coders/bmp.c (ReadBMPImage): Avoid possible division by zero
 when decoding CIE primary values. (Credit to OSS-Fuzz)</li>
 <li>magick/export.c (ExportViewPixelArea): Only compute
