@@ -1,5 +1,10 @@
 2018-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/topol.c (ReadTOPOLImage): Add additional header
+	validations.  Fixes oss-fuzz issue 5975
+	"graphicsmagick/coder_TOPOL_fuzzer: Floating-point-exception in
+	ReadTOPOLImage".  (Credit to OSS-Fuzz)
+
 	* coders/bmp.c (ReadBMPImage): Avoid possible division by zero
 	when decoding CIE primary values. (Credit to OSS-Fuzz)
 
